Update website: convert to multi-page layout, add typewriter effect, update fonts to Courier New, add background images

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -12,6 +12,11 @@ dist
 dist-ssr
 *.local
 
+# Large media files
+*.gif
+*.mp4
+*.mov
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
