--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,38 @@
 # Dependencies
 node_modules/
-package-lock.json
-yarn.lock
+frontend/node_modules/
+backend/node_modules/
+
+# Build outputs
+frontend/dist/
+frontend/build/
+backend/dist/
 
 # Environment variables
 .env
 .env.local
-.env.*.local
-
-# Build outputs
-dist/
-build/
-*.log
-
-# OS files
-.DS_Store
-Thumbs.db
+.env.development.local
+.env.test.local
+.env.production.local
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
 
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Misc
+*.log
+.cache/
