--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,9 +37,16 @@ jobs:
         working-directory: ./frontend
         env:
           # Set the repository name for the base path
-          # Replace 'PersonalWebsite' with your actual repository name
+          # For username.github.io repositories, set VITE_REPO_NAME to empty string
+          # For project pages (username.github.io/repo-name), use the repo name
           VITE_REPO_NAME: ${{ github.event.repository.name }}
         run: npm run build
+
+      - name: Verify build output
+        working-directory: ./frontend
+        run: |
+          ls -la dist/
+          echo "Build completed successfully"
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
