--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,13 +39,28 @@ jobs:
           # Set the repository name for the base path
           # For username.github.io repositories, set VITE_REPO_NAME to empty string
           # For project pages (username.github.io/repo-name), use the repo name
+          # Using the actual repository name from GitHub
           VITE_REPO_NAME: ${{ github.event.repository.name }}
-        run: npm run build
+        run: |
+          echo "Repository name: $VITE_REPO_NAME"
+          echo "Building with base path: /$VITE_REPO_NAME/"
+          npm run build
 
       - name: Verify build output
         working-directory: ./frontend
         run: |
+          echo "=== Build Output Contents ==="
           ls -la dist/
+          echo ""
+          echo "=== Checking index.html base path ==="
+          head -15 dist/index.html | grep -E "(href|src)" || echo "No href/src found in first 15 lines"
+          echo ""
+          echo "=== Verifying 404.html exists ==="
+          test -f dist/404.html && echo "✓ 404.html exists" || echo "✗ 404.html missing"
+          echo ""
+          echo "=== Base path check ==="
+          grep -o 'href="/[^"]*"' dist/index.html | head -3
+          echo ""
           echo "Build completed successfully"
 
       - name: Setup Pages
@@ -55,6 +70,11 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: './frontend/dist'
+          
+      - name: List artifact contents
+        run: |
+          echo "=== Artifact contents ==="
+          find ./frontend/dist -type f -name "*.html" -o -name "*.js" -o -name "*.css" | head -10
 
   deploy:
     environment:
@@ -66,4 +86,14 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        
+      - name: Deployment Info
+        run: |
+          echo "=== Deployment Information ==="
+          echo "Deployment URL: ${{ steps.deployment.outputs.page_url }}"
+          echo "Expected URL: https://srilekha511.github.io/srilekhamamidala/"
+          echo "Repository: ${{ github.repository }}"
+          echo "Repository Name: ${{ github.event.repository.name }}"
+          echo ""
+          echo "If the deployment URL doesn't match, check GitHub Pages settings."
 
